--- a/.github/workflows/ppv.yml
+++ b/.github/workflows/ppv.yml
@@ -1,94 +1,68 @@
-name: PPV Stream Fetcher
+name: 🚀 Update PPVLand Playlist 📺
 
 on:
   schedule:
-    - cron: '0 * * * *'   # hourly (UTC); change as needed
+    - cron: '0 * * * *'  # ⏰ Run every hour
   workflow_dispatch:
 
 permissions:
   contents: write
 
 jobs:
-  fetch-streams:
+  scrape:
     runs-on: ubuntu-latest
 
     steps:
-    - name: 📥 Checkout code
-      uses: actions/checkout@v4
-      with:
-        persist-credentials: true
-        fetch-depth: 0
+      - name: 📥 Checkout repository
+        uses: actions/checkout@v3
+        with:
+          fetch-depth: 0
 
-    - name: 🐍 Set up Python
-      uses: actions/setup-python@v5
-      with:
-        python-version: '3.10'
+      - name: 🐍 Set up Python 3.11
+        uses: actions/setup-python@v4
+        with:
+          python-version: '3.11'
 
-    - name: 📦 Install dependencies
-      run: |
-        python -m pip install --upgrade pip
-        pip install -r requirements.txt || true
-        # if your script needs playwright, uncomment:
-        # pip install aiohttp playwright
-        # playwright install
-        # playwright install-deps
+      - name: 📦 Install Python dependencies & Playwright
+        run: |
+          python -m pip install --upgrade pip
+          pip install playwright urllib3 aiohttp
+          playwright install firefox
+          playwright install-deps
 
-    - name: 🔐 Decode PPV script from secret
-      env:
-        PPV_PY_B64: ${{ secrets.PPV_PY_B64 }}
-      run: |
-        if [ -z "$PPV_PY_B64" ]; then
-          echo "PPV_PY_B64 secret is empty" && exit 1
-        fi
-        echo "$PPV_PY_B64" | base64 --decode > ppv.py
-        chmod +x ppv.py
-        ls -l ppv.py
-        head -n 5 ppv.py || true
+      - name: 🎯 Run scraping script
+        run: python ppv.py
 
-    - name: ▶️ Run PPV script
-      run: python ppv.py
+      - name: 💾 Commit & Safely Push if Playlist Changed
+        env:
+          GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        run: |
+          git config user.name "github-actions[bot]"
+          git config user.email "github-actions[bot]@users.noreply.github.com"
 
-    - name: 🧪 Show status & diff
-      run: |
-        git status --porcelain
-        git diff -- PPVLand.m3u8 || true
+          # Stage the output
+          git add PPVLand.m3u8
 
-    - name: 💾 Commit changes
-      if: success()
-      env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-      run: |
-        git config --local user.name  "github-actions[bot]"
-        git config --local user.email "41898282+github-actions[bot]@users.noreply.github.com"
-        git add PPVLand.m3u8 || true
-        if ! git diff --staged --quiet; then
-          git commit -m "Update PPV streams [skip ci]" || true
-          git push
-        else
-          echo "No changes to commit"
-        fi
+          # Check if file actually changed
+          if git diff --cached --quiet; then
+            echo "✅ No changes to commit"
+            exit 0
+          fi
 
-    - name: ☁️ Upload to Cloudflare KV
-      if: success()
-      env:
-        CF_ACCOUNT_ID: ${{ secrets.CF_ACCOUNT_ID }}
-        CF_API_TOKEN: ${{ secrets.CF_API_TOKEN }}
-        CF_NAMESPACE_ID: ${{ secrets.CF_NAMESPACE_ID }}
-      run: |
-        if [ ! -f PPVLand.m3u8 ]; then
-          echo "PPVLand.m3u8 not found, skipping Cloudflare upload." && exit 0
-        fi
+          git commit -m "🔁 Update playlist $(date -u +'%a %b %d %T UTC %Y')"
 
-        # Upload to KV
-        curl -s -X PUT "https://api.cloudflare.com/client/v4/accounts/${CF_ACCOUNT_ID}/storage/kv/namespaces/${CF_NAMESPACE_ID}/values/PPVLand.m3u8" \
-          -H "Authorization: Bearer ${CF_API_TOKEN}" \
-          -H "Content-Type: text/plain" \
-          --data-binary "@PPVLand.m3u8" \
-          | jq .
+          # Small random delay to reduce collisions
+          sleep $((RANDOM % 10 + 5))
 
-    - name: 📦 Upload playlist artifact
-      if: always()
-      uses: actions/upload-artifact@v4
-      with:
-        name: PPVLand.m3u8
-        path: PPVLand.m3u8
+          # Safe push, fallback merge if rejected
+          if ! git push origin main; then
+            echo "⚠️ Push rejected. Trying safe fetch + merge..."
+            git pull origin main --rebase || {
+              echo "❌ Rebase failed. Exiting to avoid corruption."
+              exit 1
+            }
+            git push origin main || {
+              echo "❌ Second push failed. Remote changed again."
+              exit 1
+            }
+          fi
