--- a/.github/workflows/sharkstreams.yml
+++ b/.github/workflows/sharkstreams.yml
@@ -1,46 +1,45 @@
 name: 🚀 Update SharkStreams Playlist 📺
 
+# Trigger the workflow manually or on schedule
 on:
   schedule:
-    - cron: '*/35 * * * *'  # every 35 minutes
-  workflow_dispatch:
-
-permissions:
-  contents: write
+    - cron: '0 * * * *'   # Every hour
+  workflow_dispatch:       # Manual trigger
 
 jobs:
   scrape:
+    name: Fetch SharkStreams Playlist
     runs-on: ubuntu-latest
 
     steps:
-      - name: 📥 Checkout repository
+      # 1. Checkout your repo
+      - name: Checkout Repo
         uses: actions/checkout@v3
 
-      - name: 🐍 Set up Python 3.11
+      # 2. Set up Python
+      - name: Setup Python
         uses: actions/setup-python@v4
         with:
-          python-version: '3.11'
+          python-version: "3.12"
 
-      - name: 📦 Install dependencies & Playwright
+      # 3. Install dependencies
+      - name: Install Dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install aiohttp beautifulsoup4 playwright
-          playwright install
-          playwright install-deps
+          pip install requests playwright
 
-      - name: 🎯 Run SharkStreams scraping script
+      # 4. Install browsers for Playwright
+      - name: Install Playwright Browsers
+        run: |
+          python -m playwright install
+
+      # 5. Run the scraper
+      - name: Run SharkStreams Scraper
         run: python sharkstreams.py
 
-      - name: 💾 Commit & Push if Playlist Changed
-        run: |
-          git config user.name "github-actions[bot]"
-          git config user.email "github-actions[bot]@users.noreply.github.com"
-
-          git add SharkStreams_All_*.m3u8
-          if git diff --cached --quiet; then
-            echo "✅ No changes to commit"
-            exit 0
-          fi
-
-          git commit -m "🔁 Update SharkStreams playlist $(date -u +'%a %b %d %T UTC %Y')"
-          git push origin main
+      # 6. Upload the generated playlist as an artifact
+      - name: Upload SharkStreams Playlist
+        uses: actions/upload-artifact@v3
+        with:
+          name: SharkStreams.m3u8
+          path: SharkStreams.m3u8
