--- a/.github/workflows/sharkstreams.yml
+++ b/.github/workflows/sharkstreams.yml
@@ -1,10 +1,9 @@
 name: 🚀 Update SharkStreams Playlist 📺
 
-# Trigger the workflow manually or on schedule
 on:
   schedule:
-    - cron: '0 * * * *'   # Every hour
-  workflow_dispatch:       # Manual trigger
+    - cron: '0 * * * *'     # Every hour
+  workflow_dispatch:         # Manual trigger
 
 jobs:
   scrape:
@@ -12,11 +11,13 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      # 1. Checkout your repo
+      # 1. Pull repo
       - name: Checkout Repo
         uses: actions/checkout@v3
+        with:
+          token: ${{ secrets.GITHUB_TOKEN }}
 
-      # 2. Set up Python
+      # 2. Python setup
       - name: Setup Python
         uses: actions/setup-python@v4
         with:
@@ -27,19 +28,22 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install requests playwright
-
-      # 4. Install browsers for Playwright
-      - name: Install Playwright Browsers
-        run: |
           python -m playwright install
 
-      # 5. Run the scraper
+      # 4. Run your script
       - name: Run SharkStreams Scraper
         run: python sharkstreams.py
 
-      # 6. Upload the generated playlist as an artifact
-      - name: Upload SharkStreams Playlist
-        uses: actions/upload-artifact@v3
-        with:
-          name: SharkStreams.m3u8
-          path: SharkStreams.m3u8
+      # 5. Commit and push updated playlist
+      - name: Commit & Push Playlist
+        run: |
+          git config --global user.name "github-actions[bot]"
+          git config --global user.email "github-actions[bot]@users.noreply.github.com"
+
+          if git diff --quiet SharkStreams.m3u8; then
+            echo "No changes to commit."
+          else
+            git add SharkStreams.m3u8
+            git commit -m "🔁 Update playlist $(date -u +'%a %b %d %T UTC %Y')"
+            git push
+          fi
