--- a/.github/workflows/sharkstreams.yml
+++ b/.github/workflows/sharkstreams.yml
@@ -15,7 +15,7 @@ jobs:
       - name: Checkout Repo
         uses: actions/checkout@v3
         with:
-          token: ${{ secrets.GITHUB_TOKEN }}
+          fetch-depth: 0
 
       # 2. Python setup
       - name: Setup Python
@@ -36,6 +36,8 @@ jobs:
 
       # 5. Commit & Push
       - name: Commit & Push Playlist
+        env:
+          GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
           git config --global user.name "github-actions[bot]"
           git config --global user.email "github-actions[bot]@users.noreply.github.com"
