--- a/.github/workflows/sharkstreams.yml
+++ b/.github/workflows/sharkstreams.yml
@@ -11,11 +11,12 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      # 1. Checkout
+      # 1. Checkout with write permission
       - name: Checkout Repo
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4
         with:
-          fetch-depth: 0
+          token: ${{ secrets.GITHUB_TOKEN }}
+          persist-credentials: true
 
       # 2. Python setup
       - name: Setup Python
@@ -30,28 +31,26 @@ jobs:
           pip install requests playwright
           python -m playwright install
 
-      # 4. Run your script
+      # 4. Run your scraper
       - name: Run SharkStreams Scraper
         run: python sharkstreams.py
 
       # 5. Commit & Push
       - name: Commit & Push Playlist
-        env:
-          GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
           git config --global user.name "github-actions[bot]"
           git config --global user.email "github-actions[bot]@users.noreply.github.com"
 
-          git add SharkStreams.m3u8 || true
+          git add Sharkstreams.m3u8 || true
 
           if git diff --cached --quiet; then
             echo "No changes to commit."
           else
             git commit -m "🔁 Update playlist $(date -u +'%a %b %d %T UTC %Y')"
-            git push
+            git push origin HEAD:main
           fi
 
-      # A: Error notification step — runs *only when failure happens*
+      # A: Error notification on failure
       - name: ❌ Report Failure
         if: failure()
         run: |
