--- a/.github/workflows/sharkstreams.yml
+++ b/.github/workflows/sharkstreams.yml
@@ -41,7 +41,7 @@ jobs:
           git config --global user.name "github-actions[bot]"
           git config --global user.email "github-actions[bot]@users.noreply.github.com"
 
-          git add Sharkstreams.m3u8 || true
+          git add SharkStreams.m3u8 || true
 
           if git diff --cached --quiet; then
             echo "No changes to commit."
