--- a/.github/workflows/ppv.yml
+++ b/.github/workflows/ppv.yml
@@ -2,67 +2,43 @@ name: 🚀 Update PPVLand Playlist 📺
 
 on:
   schedule:
-    - cron: '0 * * * *'  # ⏰ Run every hour
+    # Run every hour on the hour
+    - cron: '0 * * * *'
   workflow_dispatch:
-
-permissions:
-  contents: write
+    # Allow manual trigger
 
 jobs:
-  scrape:
+  fetch-streams:
     runs-on: ubuntu-latest
-
+    
     steps:
-      - name: 📥 Checkout repository
-        uses: actions/checkout@v3
-        with:
-          fetch-depth: 0
-
-      - name: 🐍 Set up Python 3.11
-        uses: actions/setup-python@v4
-        with:
-          python-version: '3.11'
-
-      - name: 📦 Install Python dependencies & Playwright
-        run: |
-          python -m pip install --upgrade pip
-          pip install playwright urllib3 aiohttp
-          playwright install firefox
-          playwright install-deps
-
-      - name: 🎯 Run scraping script
-        run: python ppv.py
-
-      - name: 💾 Commit & Safely Push if Playlist Changed
-        env:
-          GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        run: |
-          git config user.name "github-actions[bot]"
-          git config user.email "github-actions[bot]@users.noreply.github.com"
-
-          # Stage the output
-          git add PPVLand.m3u8
-
-          # Check if file actually changed
-          if git diff --cached --quiet; then
-            echo "✅ No changes to commit"
-            exit 0
-          fi
-
-          git commit -m "🔁 Update playlist $(date -u +'%a %b %d %T UTC %Y')"
-
-          # Small random delay to reduce collisions
-          sleep $((RANDOM % 10 + 5))
-
-          # Safe push, fallback merge if rejected
-          if ! git push origin main; then
-            echo "⚠️ Push rejected. Trying safe fetch + merge..."
-            git pull origin main --rebase || {
-              echo "❌ Rebase failed. Exiting to avoid corruption."
-              exit 1
-            }
-            git push origin main || {
-              echo "❌ Second push failed. Remote changed again."
-              exit 1
-            }
-          fi
+    - name: Checkout code
+      uses: actions/checkout@v3
+      
+    - name: Set up Python
+      uses: actions/setup-python@v4
+      with:
+        python-version: '3.10'
+        
+    - name: Install dependencies
+      run: |
+        python -m pip install --upgrade pip
+        pip install aiohttp playwright
+        playwright install
+        playwright install-deps
+        
+    - name: Run PPV script
+      run: |
+        python ppv.py
+        
+    - name: Commit changes
+      if: success()
+      run: |
+        git config --local user.email "action@github.com"
+        git config --local user.name "GitHub Action"
+        git add PPVLand.m3u8
+        git diff --quiet && git diff --staged --quiet || 
+          (git commit -m "Update PPV streams [skip ci]" && 
+           git push) || echo "No changes to commit"
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
