--- a/.github/workflows/ppv.yml
+++ b/.github/workflows/ppv.yml
@@ -38,7 +38,7 @@ jobs:
         git config --local user.name "GitHub Action"
         git add PPVLand.m3u8
         git diff --quiet && git diff --staged --quiet || 
-          (git commit -m "Update PPV streams [skip ci]" && 
+          (git commit -m "🔁 Update playlist $(date -u +'%a %b %d %T UTC %Y')" && 
            git push) || echo "No changes to commit"
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
